[tool.poetry]
name = "pong"
version = "0.1.0"
description = "A simple pong game made on PyGame. Play with a friend or the computer."
authors = ["Sayhan Rahman <sayhanrahman@gokkusagi.k12.tr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
